# community-care

./: .gitignore  README.md  justfile  pyproject.toml
app/: main.py
conf/: config.toml  feature_model.toml
docs/: workforce_scheduling.md
notebooks/: README_housing_data.md  housing_panelreg_mo.py
scripts/: generate_data.py  generate_data_features.py  train_models.py
src/community_care/: __init__.py  feature_model.py  synthetic_pop.py
