[project]
name = "community-care"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Booth", email = "michael@databooth.com.au" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.1",
    "mlflow>=3.1.0",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.0",
    "watchdog>=6.0.0",
]

[project.scripts]
community-care = "community_care:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pip>=25.1.1",
]
