[project]
name = "community-care"
version = "0.1.2"
description = "Demo application for CommunityCare client data modelling, segmentation, demand prediction and panel regression."
readme = "README.md"
authors = [{ name = "Michael Booth", email = "michael@databooth.com.au" }]
requires-python = ">=3.11,<3.12"
dependencies = [
    "duckdb>=1.3.1",
    "linearmodels>=6.1",
    "marimo>=0.14.7",
    "mlflow>=3.1.0",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
    "statsmodels>=0.14.4",
    "streamlit>=1.46.0",
    "watchdog>=6.0.0",
    "scipy<=1.11.0",
    "python-synthpop>=0.1.2",
]

[project.scripts]
community-care = "community_care:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pip>=25.1.1"]
